align icons again correctly

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1456,7 +1456,6 @@ table .span24 {
   width: 14px;
   height: 14px;
   line-height: 14px;
-  vertical-align: middle;
   background-image: url("http://cdn.kde.org/img/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
